--- a/package.json
+++ b/package.json
@@ -1,36 +1,23 @@
 {
   "name": "ts-fastify-mongoose-boilerplate",
   "version": "1.0.0",
-  "description": "Backend API service",
-  "main": "dist/index.js",
+  "private": true,
+  "description": "Monorepo with Fastify API and Next.js frontend",
+  "workspaces": [
+    "apps/api",
+    "apps/web"
+  ],
   "scripts": {
-    "dev": "npm run build && concurrently \"npm run build:dev\" \"npm run start:dev\"",
-    "build:dev": "tsc --watch",
-    "build": "tsc",
-    "start:dev": "NODE_ENV=development node --watch ./dist/index.js",
-    "start": "NODE_ENV=production node ./dist/index.js",
-    "lint": "eslint --fix ./src/**/*.ts",
-    "lint:check": "eslint ./src/**/*.ts"
+    "dev:api": "npm run dev -w api",
+    "dev:web": "npm run dev -w web",
+    "build": "npm run build --workspaces --if-present",
+    "build:api": "npm run build -w api",
+    "build:web": "npm run build -w web",
+    "start:api": "npm run start -w api",
+    "start:web": "npm run start -w web",
+    "lint": "npm run lint --workspaces --if-present"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fastify/env": "^5.0.0",
-    "@fastify/static": "^8.0.0",
-    "fastify": "^5.7.4",
-    "mongoose": "^8.0.3",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.8.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
-    "glob": "^10.3.10",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
-  }
+  "license": "ISC"
 }
