--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "npm run build && concurrently \"npm run build:dev\" \"npm run start:dev\"",
     "build:dev": "tsc --watch",
+    "prebuild": "npm run build -w types",
     "build": "tsc",
     "start:dev": "NODE_ENV=development node --watch ./dist/index.js",
     "start": "NODE_ENV=production node ./dist/index.js",
@@ -13,6 +14,7 @@
     "lint:check": "eslint ./src/**/*.ts"
   },
   "dependencies": {
+    "types": "*",
     "@fastify/env": "^5.0.0",
     "@fastify/static": "^8.0.0",
     "fastify": "^5.7.4",
