chore(docker): add docker and update project name to 'arqh-case-goksu-baser' in package files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-fastify-mongoose-boilerplate",
+  "name": "arqh-case-goksu-baser",
   "version": "1.0.0",
   "private": true,
   "description": "Monorepo with Fastify API and Next.js frontend",
