--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,14 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
+    "tailwindcss": "3.4.17",
+    "postcss": "^8",
+    "autoprefixer": "^10",
     "typescript": "^5"
   }
 }
