--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,13 +14,14 @@
     "lint:check": "eslint ./src/**/*.ts"
   },
   "dependencies": {
-    "types": "*",
     "@fastify/env": "^5.0.0",
     "@fastify/static": "^8.0.0",
     "fastify": "^5.7.4",
+    "ioredis": "^5.9.2",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "types": "*"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
