--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       NODE_ENV: production
       DB_URL: mongodb://mongo:27017/app
+      REDIS_URL: redis://redis:6379
     depends_on:
       mongo:
         condition: service_healthy
