feat(api, worker): integrate db package and update build process; remove duplicate definitions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "apps/api",
     "apps/web",
     "apps/worker",
-    "packages/types"
+    "packages/types",
+    "packages/db"
   ],
   "scripts": {
     "dev:api": "npm run dev -w api",
