--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -8,7 +8,7 @@ COPY apps ./apps
 
 RUN npm ci
 
-RUN npm run build -w types && npm run build -w worker
+RUN npm run build -w types && npm run build -w db && npm run build -w worker
 
 FROM node:20-alpine AS runner
 
@@ -18,6 +18,8 @@ COPY --from=builder /app/package.json package.json
 COPY --from=builder /app/node_modules node_modules
 COPY --from=builder /app/packages/types/dist packages/types/dist
 COPY --from=builder /app/packages/types/package.json packages/types/package.json
+COPY --from=builder /app/packages/db/dist packages/db/dist
+COPY --from=builder /app/packages/db/package.json packages/db/package.json
 COPY --from=builder /app/apps/worker/dist apps/worker/dist
 COPY --from=builder /app/apps/worker/package.json apps/worker/package.json
 
