--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run build && concurrently \"npm run build:dev\" \"npm run start:dev\"",
     "build:dev": "tsc --watch",
-    "prebuild": "npm run build -w types",
+    "prebuild": "npm run build -w types && npm run build -w db",
     "build": "tsc",
     "start:dev": "NODE_ENV=development node --watch ./dist/index.js",
     "start": "NODE_ENV=production node ./dist/index.js",
@@ -22,7 +22,8 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.8.0",
     "types": "*",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "db": "*"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
