--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run build && concurrently \"npm run build:dev\" \"npm run start:dev\"",
     "build:dev": "tsc --watch",
-    "prebuild": "npm run build -w types",
+    "prebuild": "npm run build -w types && npm run build -w db",
     "build": "tsc",
     "start:dev": "NODE_ENV=development node --watch ./dist/index.js",
     "start": "NODE_ENV=production node ./dist/index.js"
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "ioredis": "^5.9.2",
     "mongoose": "^8.0.3",
-    "types": "*"
+    "types": "*",
+    "db": "*"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
