--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       NODE_ENV: production
       DB_URL: mongodb://mongo:27017/app
       REDIS_URL: redis://redis:6379
+      # CORS origin: browser uses localhost when user accesses app
+      WEB_URL: http://localhost:3000
     depends_on:
       mongo:
         condition: service_healthy
